# claude-issue-triage-agent

./: .gitignore  LICENSE  README.md  action.yml  pyproject.toml
.github/workflows/: triage.yml
examples/: consumer-workflow.yml
tests/: test_classifier.py  test_github_api.py  test_main.py  test_package.py
triage_agent/: classifier.py  github_api.py  main.py  prompts.py
