[project]
name = "claude-issue-triage-agent"
version = "0.1.0"
description = "A Claude-powered GitHub Action that triages new issues: classifies, summarizes, and suggests existing labels."
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["triage_agent*"]
